modify new things

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.application.name=user-service
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 
 spring.data.mongodb.uri=mongodb+srv://rashmikarathnayaka01:Rashmika123@cluster1.byulgzh.mongodb.net/user_db?retryWrites=true&w=majority&appName=Cluster1
-server.port=8081
+server.port=8082
 
 # Swagger & logging (optional, but useful)
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 logging.level.org.springframework=INFO
+spring.data.mongodb.ssl.enabled=true
