User service update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,28 @@
 spring.application.name=user-service
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 
-spring.data.mongodb.uri=mongodb+srv://rashmikarathnayaka01:Rashmika123@cluster1.byulgzh.mongodb.net/user_db?retryWrites=true&w=majority&appName=Cluster1
-server.port=8081
+# Database configuration
+spring.data.mongodb.host=${MONGODB_HOST:localhost}
+spring.data.mongodb.port=${MONGODB_PORT:27017}
+spring.data.mongodb.database=${MONGODB_DATABASE:userdb}
+spring.data.mongodb.username=${MONGODB_USERNAME:pasindu}
+spring.data.mongodb.password=${MONGODB_PASSWORD:pasindu}
+spring.data.mongodb.authentication-database=${MONGODB_AUTH_DATABASE:admin}
 
-# Swagger & logging (optional, but useful)
+# Server configuration
+server.port=${SERVER_PORT:8082}
+
+# Actuator endpoints for health checks and monitoring
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=when-authorized
+management.health.mongodb.enabled=true
+
+# Swagger & API documentation
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Logging configuration
 logging.level.org.springframework=INFO
+logging.level.com.midlane.project_management_tool_user_service=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
