--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=user-service
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 
 # Database configuration
-spring.data.mongodb.host=${MONGODB_HOST:localhost}
+spring.data.mongodb.host=${MONGODB_HOST:host.docker.internal}
 spring.data.mongodb.port=${MONGODB_PORT:27017}
 spring.data.mongodb.database=${MONGODB_DATABASE:userdb}
 spring.data.mongodb.username=${MONGODB_USERNAME:pasindu}
