refactor(all): Refactored the all the codebase to include organizational hierarchy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,26 @@
+# Application Configuration
 spring.application.name=user-service
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
-
-# Database configuration
-spring.data.mongodb.host=${MONGODB_HOST:host.docker.internal}
-spring.data.mongodb.port=${MONGODB_PORT:27017}
-spring.data.mongodb.database=${MONGODB_DATABASE:userdb}
-spring.data.mongodb.username=${MONGODB_USERNAME:pasindu}
-spring.data.mongodb.password=${MONGODB_PASSWORD:pasindu}
-spring.data.mongodb.authentication-database=${MONGODB_AUTH_DATABASE:admin}
-
-# Server configuration
 server.port=${SERVER_PORT:8082}
+
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5434/project_management_db
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Validation Configuration
+spring.jpa.open-in-view=false
 
 # Actuator endpoints for health checks and monitoring
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=when-authorized
-management.health.mongodb.enabled=true
 
 # Swagger & API documentation
 springdoc.api-docs.enabled=true
@@ -25,4 +30,6 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # Logging configuration
 logging.level.org.springframework=INFO
 logging.level.com.midlane.project_management_tool_user_service=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
