Dockerizing the service

--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,1 +1,3 @@
-#MONGO_URI=mongodb+srv://Ray123:user123@cluster001.taxeny4.mongodb.net/user_db?retryWrites=true&w=majority&appName=Cluster001
+DB_URL=jdbc:postgresql://pg-sep-sep-semster5.c.aivencloud.com:25761/auth_service_db?sslmode=require
+DB_USERNAME=avnadmin
+DB_PASSWORD=AVNS_sj7aqMN0gMnCHlR6gYX
