--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,3 +1,3 @@
-DB_URL=jdbc:postgresql://pg-sep-sep-semster5.c.aivencloud.com:25761/auth_service_db?sslmode=require
-DB_USERNAME=avnadmin
-DB_PASSWORD=AVNS_sj7aqMN0gMnCHlR6gYX
+DB_URL=jdbc:postgresql://localhost:5434/user_service_db
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
