--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,46 +1,59 @@
-# Application Configuration
 spring.application.name=user-service
-server.port=${SERVER_PORT:8082}
 
-# PostgreSQL Database Configuration
-spring.datasource.url=${DB_URL}
+spring.datasource.url=jdbc:postgresql://localhost:5434/user_service_db
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-# JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+server.port=${SERVER_PORT:8081}
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
 
-# Validation Configuration
-spring.jpa.open-in-view=false
+# RSA JWT Configuration
+rsa.private-key=${RSA_PRIVATE_KEY:}
+rsa.public-key=${RSA_PUBLIC_KEY:}
+rsa.key-store-path=${RSA_KEY_STORE_PATH:./keys}
 
-# Actuator endpoints for health checks and monitoring
-management.endpoints.web.exposure.include=health,info,metrics,prometheus
-management.endpoint.health.show-details=when-authorized
+# JWT Token Configuration
+jwt.access-token.expiration=${JWT_ACCESS_TOKEN_EXPIRATION}
+jwt.refresh-token.expiration=${JWT_REFRESH_TOKEN_EXPIRATION}
+jwt.max-refresh-tokens-per-user=${JWT_MAX_REFRESH_TOKENS_PER_USER}
+
+# Legacy JWT Configuration (for backward compatibility during migration)
+jwt.secret=${JWT_SECRET:}
+jwt.expiration=${JWT_EXPIRATION:}
+
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 
 # Swagger & API documentation
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 
-# Logging configuration
-logging.level.org.springframework=INFO
-logging.level.com.midlane.project_management_tool_user_service=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+# Email Verification Configuration
+app.mail.from=${MAIL_FROM:noreply@projectmanagement.com}
+# Google OAuth Configuration
+app.oauth.google.client-id=${GOOGLE_CLIENT_ID}
+app.oauth.google.client-secret=${GOOGLE_CLIENT_SECRET}
+
+# Facebook OAuth Configuration
+app.oauth.facebook.app-id=${FACEBOOK_APP_ID}
+app.oauth.facebook.app-secret=${FACEBOOK_APP_SECRET}
 
 # Kafka Configuration
 spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
-spring.kafka.consumer.group-id=user-service-group
+spring.kafka.consumer.group-id=auth-service-group
 spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
-spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
-spring.kafka.consumer.properties.spring.json.use.type.info.headers=false
-spring.kafka.consumer.properties.spring.json.value.default.type=com.midlane.project_management_tool_user_service.dto.UserCreatedEvent
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=1000
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
