--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=user-service
 
-spring.datasource.url=jdbc:postgresql://localhost:5434/user_service_db
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5434/user_service_db}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-server.port=${SERVER_PORT:8081}
-spring.jpa.hibernate.ddl-auto=create-only
+server.port=${SERVER_PORT:8082}
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 
 # RSA JWT Configuration
@@ -16,19 +16,19 @@ rsa.public-key=${RSA_PUBLIC_KEY:}
 rsa.key-store-path=${RSA_KEY_STORE_PATH:./keys}
 
 # JWT Token Configuration
-jwt.access-token.expiration=${JWT_ACCESS_TOKEN_EXPIRATION}
-jwt.refresh-token.expiration=${JWT_REFRESH_TOKEN_EXPIRATION}
-jwt.max-refresh-tokens-per-user=${JWT_MAX_REFRESH_TOKENS_PER_USER}
+jwt.access-token.expiration=${JWT_ACCESS_TOKEN_EXPIRATION:900000}
+jwt.refresh-token.expiration=${JWT_REFRESH_TOKEN_EXPIRATION:604800000}
+jwt.max-refresh-tokens-per-user=${JWT_MAX_REFRESH_TOKENS_PER_USER:5}
 
 # Legacy JWT Configuration (for backward compatibility during migration)
-jwt.secret=${JWT_SECRET:}
-jwt.expiration=${JWT_EXPIRATION:}
+jwt.secret=${JWT_SECRET:your-secret-key-here}
+jwt.expiration=${JWT_EXPIRATION:900000}
 
 # Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+spring.mail.username=${MAIL_USERNAME:}
+spring.mail.password=${MAIL_PASSWORD:}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -40,20 +40,15 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 # Email Verification Configuration
 app.mail.from=${MAIL_FROM:noreply@projectmanagement.com}
+
 # Google OAuth Configuration
-app.oauth.google.client-id=${GOOGLE_CLIENT_ID}
-app.oauth.google.client-secret=${GOOGLE_CLIENT_SECRET}
+app.oauth.google.client-id=${GOOGLE_CLIENT_ID:}
+app.oauth.google.client-secret=${GOOGLE_CLIENT_SECRET:}
 
 # Facebook OAuth Configuration
-app.oauth.facebook.app-id=${FACEBOOK_APP_ID}
-app.oauth.facebook.app-secret=${FACEBOOK_APP_SECRET}
+app.oauth.facebook.app-id=${FACEBOOK_APP_ID:}
+app.oauth.facebook.app-secret=${FACEBOOK_APP_SECRET:}
 
-# Kafka Configuration
-spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
-spring.kafka.consumer.group-id=auth-service-group
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.enable-auto-commit=true
-spring.kafka.consumer.auto-commit-interval=1000
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-
+# Management endpoints for health checks
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
