--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Kafka -->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
