--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=user-service
 
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5434/user_service_db}
+spring.datasource.url=${USER_DB_URL:jdbc:postgresql://localhost:5434/user_service_db}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 
@@ -49,6 +49,7 @@ app.oauth.google.client-secret=${GOOGLE_CLIENT_SECRET:}
 app.oauth.facebook.app-id=${FACEBOOK_APP_ID:}
 app.oauth.facebook.app-secret=${FACEBOOK_APP_SECRET:}
 
-# Management endpoints for health checks
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=always
+# Kafka Configuration
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:8087}
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
