--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.port=${SERVER_PORT:8082}
-spring.jpa.hibernate.ddl-auto=create-only
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 # RSA JWT Configuration
