--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- H2 Database for Testing -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- Kafka -->
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
