--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,15 +16,16 @@ jobs:
     name: Run Tests
 
     services:
-      mongodb:
-        image: mongo:7.0
+      postgres:
+        image: postgres:15
         env:
-          MONGO_INITDB_ROOT_USERNAME: root
-          MONGO_INITDB_ROOT_PASSWORD: password
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_DB: testdb
         ports:
-          - 27017:27017
+          - 5432:5432
         options: >-
-          --health-cmd "mongosh --eval 'db.adminCommand(\"ping\")'"
+          --health-cmd "pg_isready -U postgres"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -44,25 +45,17 @@ jobs:
       run: |
         mkdir -p src/test/resources
         cat > src/test/resources/application-test.properties << EOF
-        spring.data.mongodb.host=localhost
-        spring.data.mongodb.port=27017
-        spring.data.mongodb.database=userservice_test
-        spring.data.mongodb.username=root
-        spring.data.mongodb.password=password
-        spring.data.mongodb.authentication-database=admin
+        spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+        spring.datasource.username=postgres
+        spring.datasource.password=postgres
+        spring.jpa.hibernate.ddl-auto=create-drop
+        spring.jpa.show-sql=false
         logging.level.org.springframework.data.mongodb=DEBUG
+        spring.kafka.bootstrap-servers=localhost:9092
         EOF
 
     - name: Run tests
       run: mvn clean test -Dspring.profiles.active=test
-
-    - name: Generate test report
-      uses: dorny/test-reporter@v1
-      if: success() || failure()
-      with:
-        name: Maven Tests
-        path: target/surefire-reports/*.xml
-        reporter: java-junit
 
   build:
     runs-on: ubuntu-latest
@@ -88,96 +81,3 @@ jobs:
       with:
         name: jar-artifact
         path: target/*.jar
-
-  docker-build:
-    runs-on: ubuntu-latest
-    needs: [test, build]
-    name: Build Docker Image
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Download build artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: jar-artifact
-        path: target/
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Log in to Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        platforms: linux/amd64,linux/arm64
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-
-  security-scan:
-    runs-on: ubuntu-latest
-    needs: docker-build
-    name: Security Scan
-
-    steps:
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-
-    - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: 'trivy-results.sarif'
-
-  deploy-staging:
-    runs-on: ubuntu-latest
-    needs: [docker-build, security-scan]
-    name: Deploy to Staging
-    if: github.ref == 'refs/heads/develop'
-    environment: staging
-
-    steps:
-    - name: Deploy to staging
-      run: |
-        echo "🚀 Deploying to staging environment..."
-        echo "Image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:develop"
-        # Add your staging deployment commands here
-
-  deploy-production:
-    runs-on: ubuntu-latest
-    needs: [docker-build, security-scan]
-    name: Deploy to Production
-    if: github.ref == 'refs/heads/main'
-    environment: production
-
-    steps:
-    - name: Deploy to production
-      run: |
-        echo "🚀 Deploying to production environment..."
-        echo "Image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
-        # Add your production deployment commands here
